# ultraschall-plugin

./: CMakeLists.txt  build.sh
cmake/: macos.cmake
include/ultraschall/: common.h  framework.h  frameworkfilemanager.h  frameworkglobals.h  frameworkhttpclient.h  frameworkhttprequest.h  frameworkhttpresponse.h  frameworkid3v2writer.h  frameworkpicture.h  frameworktagwriterfactory.h  frameworkxmlattribute.h  frameworkxmldocument.h  frameworkxmlelement.h  model.h  modelchapterimage.h  modelchaptertag.h  modelchapterurl.h  modelglobals.h  platform.h  platformfiledialog.h  platformfilesystem.h  platformglobals.h  reaper.h  reapercustomactionmanager.h  reapergateway.h  reaperglobals.h  reapericustomaction.h  reapernotificationstore.h  reaperproject.h  reapersystemproperties.h  runtime.h  runtimeglobals.h  runtimeguid.h  runtimemalloc.h  runtimesequentialstream.h  runtimesharedobject.h  runtimestream.h  runtimestring.h  runtimestringutilities.h  runtimeunicode.h
src/: CMakeLists.txt
src/framework/: CMakeLists.txt  frameworkclass.h  frameworkcommon.h  frameworkfilemanager.cpp  frameworkhttpclient.cpp  frameworkhttprequest.cpp  frameworkhttpresponse.cpp  frameworkid3v2.cpp  frameworkid3v2.h  frameworkid3v2context.cpp  frameworkid3v2context.h  frameworkid3v2writer.cpp  frameworkitagwriter.h  frameworkpicture.cpp  frameworkservicestatus.h  frameworktagwriterfactory.cpp  frameworkxmlattribute.cpp  frameworkxmldocument.cpp  frameworkxmlelement.cpp
src/model/: CMakeLists.txt  modelclass.h  modelcommon.h
src/platform/: CMakeLists.txt  platformclass.h  platformcommon.h  platformendianess.h
src/platform/macos/: platformfiledialog.cpp  platformfilesystem.cpp
src/plugin/: CMakeLists.txt  plugin.cpp  pluginInsertchapters.cpp  pluginapplication.cpp  pluginapplication.h  pluginclass.h  plugincommon.h  plugininsertchapters.h  plugininsertchapters2.cpp  plugininsertchapters2.h  pluginresource.rc  pluginsavechapters.cpp  pluginsavechapters.h  pluginsavechapters2.cpp  pluginsavechapters2.h  pluginupdatehandler.cpp  pluginupdatehandler.h
src/reaper/: CMakeLists.txt  reaperclass.h  reapercommon.h  reapercustomaction.cpp  reapercustomaction.h  reapercustomactionfactory.cpp  reapercustomactionfactory.h  reapercustomactionmanager.cpp  reaperentrypoints.cpp  reapergateway.cpp  reapernotification.cpp  reapernotification.h  reapernotificationclass.h  reapernotificationqueue.cpp  reapernotificationqueue.h  reapernotificationstore.cpp  reaperproject.cpp  reapersystemproperties.cpp
src/runtime/: CMakeLists.txt  runtimeclass.h  runtimecommon.h  runtimeguid.cpp  runtimesequentialstream.cpp  runtimestream.cpp  runtimestring.cpp  runtimestringutilities.cpp
